# agent-memory-hub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
adapters/: claude.yaml  codex.yaml  hermes.yaml  openclaw.yaml
agent_memory/: __init__.py  bootstrap.py  cli.py  cloud.py  config.py  curator.py  inbox.py  refresh.py  registry.py  safety.py  setup.py  sync.py  triggers.py
agent_memory/adapters/: claude.yaml  codex.yaml  hermes.yaml  openclaw.yaml
docs/: adapters.md  architecture.md  auto-refresh.md  cloud.md  curator.md  onboarding.md  perspective.md  quickstart.md  refresh.md  security.md  sync.md
scripts/: agent-memory
tests/: test_adapter_manifests.py  test_cli.py  test_cloud.py  test_config_setup.py  test_curator.py  test_inbox.py  test_packaging.py  test_refresh.py  test_registry_bootstrap.py  test_sync.py  test_triggers.py
