[project]
name = "agent-memory-hub"
version = "0.1.0"
description = "Open-source shared memory infrastructure for multi-agent, multi-device AI workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
include = ["agent_memory*"]

